@@ -8,8 +8,11 @@ lbdb (0.20) unstable; urgency=low
   * Add override.Lintian to avoid warnings about missing Palm::PDB and
     Palm::Address, which are in libpalm-perl, that is suggested (we don't
     depend on it, because this is only used by the m_palm module).
+  * Rename $p to $CURRENT_MODULE_DIR in lbdbq, so a module can access the
+    directory where it is placed itself for accessing some helper
+    applications.
 
- -- Roland Rosenfeld <roland@debian.org>  Mon, 21 Aug 2000 14:03:42 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Mon, 21 Aug 2000 14:51:41 +0200
 
 lbdb (0.19.9) unstable; urgency=low
 
